--- a/src/components/aside-media/aside.module.css
+++ b/src/components/aside-media/aside.module.css
@@ -5,6 +5,7 @@
     --white-color: #FFFFFF;
     --gray-color: #ABB2BF;
     --background-color: #282C33;
+    --main-background-color: #2C3036;
 }
 
 .asideMedia {
@@ -19,7 +20,7 @@
     align-items: center;
 }
 
-.line {
+.asideLine {
     height: 191px;
     width: 1px;
     background-color: var(--gray-color);
