--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -5,6 +5,7 @@
     --white-color: #FFFFFF;
     --gray-color: #ABB2BF;
     --background-color: #282C33;
+    --main-background-color: #2C3036;
 }
 
 .portfolioContainer {
@@ -22,6 +23,7 @@
     justify-content: space-between;
     align-items: flex-end;
     padding-bottom: 8px;
+    background-color: var(--main-background-color);
 }
 
 .headerTitle {
