--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -70,18 +70,23 @@
     align-items: center;
 }
 
-.heroImage div {
+.workingOn {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    gap: 10px;
     padding: 8px;
-    width: 386px;
+    width: auto;
     height: 21px;
     border: 1px solid var(--gray-color);
-    gap: 10px;
     font-family: "Fira Code", monospace;
     font-size: 16px;
     font-weight: 500;
     color: var(--gray-color);
+}
+
+.workingOn p {
+    display: flex;
+    flex-direction: row;
 }
 
 .heroImage a {
