--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -6,3 +6,86 @@
     --gray-color: #ABB2BF;
     --background-color: #2C3036;
 }
+
+.portfolioContainer {
+    background-color: var(--background-color);
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    border-top: 1px solid #ABB2BF;
+    font-family: "Fira Code", monospace;
+}
+
+.footerContainer {
+    width: 1025px;
+    height: auto;
+    padding: 32px 0px;
+    margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+.footerSectionBot {
+    display: inline;
+    text-align: center;
+    color: var(--gray-color);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.footerSectionTop {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.footerSectionTop:first-child {
+    align-items: flex-start;
+}
+
+.footerSectionTop:last-child {
+    align-items: flex-end;
+}
+
+.footerSectionTop div:first-child {
+    display: flex;
+    gap: 24px;
+    color: var(--gray-color);
+    font-weight: 400;
+}
+
+.footerSectionTop div :first-child {
+    color: var(--white-color);
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.footerSectionTop section:first-child {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.footerSectionTop section:first-child>p {
+    color: var(--white-color);
+    font-weight: 400;
+}
+
+.footerSectionTop section:last-child {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.footerSectionTop section:last-child>p {
+    color: var(--white-color);
+    font-weight: 500;
+    font-size: 24px;
+}
+
+.footerSectionTop section:last-child>div {
+    display: flex;
+    gap: 8px;
+    height: 32px;
+}
