--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
+
+:root {
+    --purple-color: #C778DD;
+    --white-color: #FFFFFF;
+    --gray-color: #ABB2BF;
+    --background-color: #282C33;
+}
+
 * {
     padding: 0;
     margin: 0;
