--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -12,22 +12,22 @@
     justify-content: space-between;
     padding: 32px 0 70px 0;
     margin: 0px auto;
+    position: relative;
 }
 
-.headerContainer div {
-    height: 21px;
+.headerContainer div:first-of-type {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 8px;
 }
 
-.headerContainer div img {
+.headerContainer div:first-of-type img {
     width: 16px;
     height: 16px;
 }
 
-.headerContainer div h1 {
+.headerContainer div:first-of-type h1 {
     font-size: 16px;
     font-weight: 700;
     color: var(--white-color);
