--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -74,3 +74,18 @@
     gap: 8px;
     height: 32px;
 }
+
+@media (max-width: 450px) {
+    .footerContainer {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    .footerSectionTop {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+    }
+}
