--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -95,6 +95,8 @@
         flex-direction: column;
         align-items: center;
         gap: 16px;
+        width: auto;
+        padding-bottom: 56px;
     }
 
     .heroSection {
