--- a/src/components/quote/quote.module.css
+++ b/src/components/quote/quote.module.css
@@ -42,4 +42,10 @@
     margin-left: auto;
 }
 
-@media (max-width: 450px) {}
+@media (max-width: 450px) {
+    .asideContainer {
+        padding-bottom: 56px;
+        max-width: 320px;
+        font-size: 20px;
+    }
+}
