--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -34,7 +34,6 @@
     color: var(--white-color);
     font-weight: 500;
     font-size: 16px;
-
 }
 
 .completeappsContainer {
@@ -94,17 +93,12 @@
     row-gap: 45px;
 }
 
-.projectsBox>div {
+.projectItem {
     border: 1px solid var(--gray-color);
-    border-bottom: none;
     max-width: 331px;
 }
 
-.projectsBox>div>div {
-    border-bottom: 1px solid var(--gray-color);
-}
-
-.projectsBox img {
+.projectItem img {
     border-bottom: 1px solid var(--gray-color);
 }
 
@@ -122,7 +116,8 @@
 
 .topText p {
     padding: 8px;
-    line-height: 1;
+    padding-top: 4px;
+    border-bottom: 1px solid var(--gray-color)
 }
 
 .bottomText {
@@ -169,11 +164,9 @@ button:hover {
     background-color: #abb2bf33;
 }
 
-
 @media (max-width: 500px) {
     .projectsBox {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: 1fr;
         row-gap: 45px;
         margin: auto;
     }
@@ -182,17 +175,8 @@ button:hover {
         padding: 32px 0;
     }
 
-    .projectsBox>div,
-    .projectsBox img {
-        max-width: 328px;
-    }
-
     .projectsLine {
         display: none !important;
-    }
-
-    .projectsContainer {
-        align-items: center;
     }
 
     .portfolioContainer section {
