--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     padding: 32px 0 70px 0;
-    margin: 0px auto;
+    margin: 0 auto;
     position: relative;
 }
 
@@ -44,40 +44,19 @@
     color: var(--gray-color);
     font-weight: 400;
     font-size: 16px;
-    transition-duration: 0.3s
+    transition-duration: 0.3s;
 }
 
 .headerNav p:hover {
     color: var(--white-color);
     transition-duration: 0.3s;
     font-weight: 500;
-    font-size: 16px;
 }
 
 .headerNav span {
     color: var(--purple-color);
     font-size: 16px;
 }
-
-/* .headerNav button {
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    gap: 4px;
-}
-
-.headerNav button p {
-    color: var(--gray-color);
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.headerNav button :hover {
-    text-decoration: none;
-    color: var(--gray-color);
-    font-size: 16px;
-    font-weight: 600;
-} */
 
 .home p,
 .work p,
@@ -98,7 +77,7 @@
     .headerContainer {
         display: flex;
         flex-direction: column;
-        padding: 24px 0 24px 0;
+        padding: 24px 0;
         gap: 16px;
     }
 
