--- a/src/components/quote/quote.module.css
+++ b/src/components/quote/quote.module.css
@@ -10,16 +10,16 @@
     flex-direction: column;
     padding-bottom: 74px;
     max-width: 1024px;
-    margin: 0px auto;
+    margin: 0 auto;
     color: var(--white-color);
     font-size: 24px;
 }
 
 .topSide {
-    position: relative;
     border: 1px solid var(--gray-color);
     padding: 32px;
     font-weight: 500;
+    position: relative;
 }
 
 .topSide img:first-of-type {
@@ -46,6 +46,6 @@
     .asideContainer {
         padding-bottom: 56px;
         max-width: 320px;
-        font-size: 20px;
+        font-size: 18px;
     }
 }
