--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -79,6 +79,12 @@
     color: var(--white-color);
     font-weight: 500;
     font-size: 16px;
+    transition-duration: 0.3s;
+}
+
+.projectsContainer p:hover {
+    color: var(--purple-color);
+    transition-duration: 0.3s;
 }
 
 .projectsLine {
