--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,4 +12,14 @@
     margin: 0;
     text-decoration: none;
     border: none;
+    background: transparent;
+}
+
+.portfolioBody {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--background-color);
+    font-family: "Fira Code", monospace;
 }
