--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,42 +1,28 @@
-.portfolioContainer {
-    background-color: var(--background-color);
-    display: flex;
-    align-items: center;
-    font-family: "Fira Code", monospace;
-}
-
 .headerContainer {
-    width: 1024px;
-    height: auto;
+    width: 1440px;
     display: flex;
     justify-content: space-between;
-    padding: 32px 0 70px 0;
-    margin: 0 auto;
     position: relative;
 }
 
-.headerContainer div:first-of-type {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-}
-
-.headerContainer div:first-of-type img {
-    width: 16px;
-    height: 16px;
-}
-
-.headerContainer div:first-of-type h1 {
+.headerContainer h1 {
+    color: var(--white-color);
     font-size: 16px;
     font-weight: 700;
-    color: var(--white-color);
+    display: flex;
+    align-items: center;
+    padding: 16px 64px;
+    gap: 16px;
+}
+
+.headerContainer img {
+    width: 32px;
 }
 
 .headerNav {
     display: flex;
-    align-items: end;
-    justify-content: center;
+    align-items: center;
+    padding: 16px 64px;
     gap: 32px;
 }
 
@@ -75,13 +61,18 @@
 
 @media (max-width: 500px) {
     .headerContainer {
+        width: 375px;
         display: flex;
         flex-direction: column;
-        padding: 24px 0;
-        gap: 16px;
+        align-items: center;
+    }
+
+    .headerContainer h1 {
+        padding: 18.5px 20px;
     }
 
     .headerNav {
+        padding: 18.5px 20px;
         gap: 16px;
     }
 }
