--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -65,14 +65,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 18.5px;
     }
 
     .headerContainer h1 {
-        padding: 18.5px 20px;
+        padding: 18.5px 20px 0px;
     }
 
     .headerNav {
-        padding: 18.5px 20px;
-        gap: 16px;
+        padding: 0px 20px 18.5px;
+        gap: 20px;
     }
 }
