--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -12,7 +12,10 @@
     display: flex;
     align-items: center;
     padding: 16px 64px;
-    gap: 16px;
+}
+
+.headerContainer>h1>img {
+    margin-right: 16px;
 }
 
 .headerContainer img {
@@ -41,38 +44,83 @@
 
 .headerNav span {
     color: var(--purple-color);
-    font-size: 16px;
 }
 
 .home p,
 .work p,
 .about p,
 .contact p {
-    color: var(--white-color);
-    font-weight: 500;
+    color: var(--white-color) !important;
+    font-weight: 500 !important;
 }
 
 .home span,
 .work span,
 .about span,
 .contact span {
-    color: var(--purple-color);
+    color: var(--purple-color) !important;
+}
+
+/* Responsivo off */
+.buttonMobile {
+    display: none;
+}
+
+.navMobile {
+    display: none;
 }
 
 @media (max-width: 500px) {
     .headerContainer {
         width: 375px;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         gap: 18.5px;
     }
 
     .headerContainer h1 {
-        padding: 18.5px 20px 0px;
+        padding: 18.5px 20px;
     }
 
+    .headerContainer>h1>span {
+        display: none;
+    }
+
+    /* Nav original escondido */
     .headerNav {
-        padding: 0px 20px 18.5px;
-        gap: 20px;
+        display: none;
+    }
+
+    /* Botão de menu responsivo */
+    .buttonMobile {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 18.5px 20px;
+    }
+
+    /* Mobile Nav */
+    .navMobile {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        width: 375px;
+        gap: 40px;
+        position: absolute;
+        top: 69px;
+        background-color: var(--background-color);
+        padding: 32px 0;
+    }
+
+    /* Estilos dos links no nav mobile */
+    .navMobile p {
+        padding: 20px 20px;
+        color: var(--gray-color);
+        font-weight: 400;
+        font-size: 24px;
+    }
+
+    .navMobile span {
+        color: var(--purple-color);
     }
 }
