--- a/src/components/about-me/aboutme.module.css
+++ b/src/components/about-me/aboutme.module.css
@@ -108,6 +108,10 @@
         font-size: 16px;
     }
 
+    .aboutHomeLine {
+        display: none;
+    }
+
     .aboutContainer>img {
         display: none;
     }
