--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -46,26 +46,25 @@
     width: 100%;
     gap: 32px
 }
-
-.cardsBox>div {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+.cardsBox>div:nth-child(1){
+    grid-column: 1;
+    grid-row: 1/3;
+    height: 206px;
 }
 
-.cardsBox>div>div {
+.cardsBox>div {
     border: 1px solid var(--gray-color);
 }
 
 /* Textos dos Cards */
-.cardsBox>div>div>p {
+.cardsBox>div>p {
     font-size: 18px;
     color: var(--gray-color);
     width: 222px;
     padding: 24px;
 }
 
-.cardsBox>div>div>h4 {
+.cardsBox>div>h4 {
     color: var(--white-color);
     font-size: 24px;
     font-weight: 600;
